--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,9 +1,972 @@
-.header__container p {
-  color: #000;
+/* reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
-.header__container p span {
-  background: linear-gradient(91deg, #51bf26 2.58%, #e3ae0b 44.51%);
+
+ul[class],
+ol[class] {
+  padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a:not([class]) {
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+a {
+  width: -moz-fit-content;
+  width: fit-content;
+  text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+/* H3 */
+/* p (#2) */
+@font-face {
+  font-family: "Manrope";
+  src: url(../fonts/Manrope-Regular.ttf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url(../fonts/Manrope-Medium.ttf);
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url(../fonts/Manrope-SemiBold.ttf);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url(../fonts/Manrope-Bold.ttf);
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url(../fonts/Manrope-ExtraBold.ttf);
+  font-weight: 800;
+}
+body {
+  font-family: "Manrope";
+  font-size: 14px;
+  font-weight: 400;
+  color: #0e0c15;
+  background: #f3f7f9;
+}
+
+.container {
+  max-width: 1340px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+h1 {
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-transform: uppercase;
+  text-wrap: balance;
+}
+h1 span {
+  text-transform: none;
+  font: inherit;
+}
+
+h2 {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+h2 span {
+  font: inherit;
+  background: linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+h3 {
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.title div {
+  border-radius: 50px;
+  border: 1px solid #7f868a;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 4px 18px;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+  color: #7f868a;
+}
+
+.btn {
+  display: flex;
+  gap: 10px;
+  border: 1px solid #2ca656;
+  background-color: transparent;
+  padding: 11px 24px;
+  padding: 11px 20px;
+  align-items: center;
+  justify-content: start;
+  color: #2ca656;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  width: 100%;
+  border-radius: 50px;
+  text-align: center;
+  transition: 0.3s linear;
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: normal;
+  position: relative;
+}
+.btn:after {
+  content: "";
+  width: 15px;
+  height: 14px;
+  background: url("../image/Arrow.svg") center center/cover no-repeat;
+}
+.btn:hover {
+  color: #fff;
+  background-color: #2ca656;
+}
+.btn:hover:after {
+  background-image: url("../image/arrow-white.svg");
+}
+
+.mb-m {
+  margin-bottom: 120px;
+}
+@media screen and (max-width: 767px) {
+  .mb-m {
+    margin-bottom: 60px;
+  }
+}
+
+.mb-s {
+  margin-bottom: 60px;
+}
+@media screen and (max-width: 767px) {
+  .mb-s {
+    margin-bottom: 30px;
+  }
+}
+
+.menu {
+  color: #7f868a;
+}
+.menu li {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.menu li a {
+  transition: 0.3s ease;
+}
+.menu li a:hover {
+  color: #2ca656;
+}
+
+.title-center {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.title-center-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 40px;
+}
+
+.title-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 767px) {
+  .title-row {
+    flex-direction: column;
+  }
+}
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: stretch;
+  height: 100%;
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 550px) {
+  .grid-container {
+    flex-direction: column;
+  }
+}
+
+.grid-item {
+  width: calc(25% - 15px);
+}
+@media screen and (max-width: 1023px) {
+  .grid-item {
+    width: calc(33.3333333333% - 15px);
+  }
+}
+@media screen and (max-width: 767px) {
+  .grid-item {
+    width: calc(50% - 10px);
+  }
+}
+@media screen and (max-width: 550px) {
+  .grid-item {
+    width: 100%;
+  }
+}
+
+.contact__wrap {
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px 0px 20px 50px;
+}
+
+.social__wrap {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.social__wrap a {
+  max-width: 64px;
+  max-height: 64px;
+  border-radius: 50%;
+}
+.social__wrap a svg {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.breadcrumbs {
+  padding: 5px 0;
+  margin-bottom: 60px;
+}
+.breadcrumbs__wrap {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  flex-wrap: wrap;
+}
+.breadcrumbs a {
+  cursor: pointer;
+  color: linear-gradient(90deg, #51bf26 58%, #e3ae0b 86.78%);
+}
+
+.feature-container {
+  border-radius: 20px;
+  border: 0.5px solid #0e0c15;
+  width: 42%;
+  background-color: #fff;
+}
+
+.feature-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 20px;
+  max-width: 100%;
+  width: 100%;
+  border-radius: 20px 20px 0 0;
+  flex-grow: 1;
+}
+
+.feature-content {
+  padding: 40px 20px;
+  background-color: #fff;
+  border-radius: 0 0 20px 20px;
+}
+@media screen and (max-width: 550px) {
+  .faq__container h2 {
+    text-wrap: balance;
+  }
+  .faq__container h2 span {
+    margin: 5px;
+    display: inline-block;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+  }
+}
+
+.page-main {
+  display: flex;
+  gap: 40px;
+}
+@media screen and (max-width: 767px) {
+  .page-main {
+    flex-direction: column;
+  }
+}
+
+.main-content {
+  width: 75%;
+}
+@media screen and (max-width: 767px) {
+  .main-content {
+    width: 100%;
+  }
+}
+
+.header {
+  background-color: #0e0c15;
+  padding: 13px 0 14px 0;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  color: #fff;
+}
+.header__container .logo {
+  max-width: 110px;
+  width: 100%;
+}
+@media screen and (max-width: 1023px) {
+  .header__container nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: calc(100vh - 76px);
+    position: fixed;
+    left: -100%;
+    top: 76px;
+    background-color: #0e0c15;
+    transition: all 0.5s ease;
+    padding: 0 20px;
+  }
+  .open .header__container nav {
+    left: 0;
+    align-items: flex-start;
+    gap: 30px;
+    top: 76px;
+    height: calc(100vh - 76px);
+    overflow: hidden;
+    overflow-y: auto;
+    z-index: 50;
+  }
+}
+.header__container nav .menu {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 1200px) {
+  .header__container nav .menu {
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .header__container nav .menu {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.header__container nav .menu .header__book {
+  display: none;
+}
+@media screen and (max-width: 1023px) {
+  .header__container nav .menu .header__book {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+  }
+  .header__container nav .menu .header__book .btn {
+    display: flex;
+    max-width: 100%;
+  }
+}
+.header__container nav .menu li {
+  padding: 4px 14px;
+}
+.header__container nav .menu li:has(.header__book) {
+  padding: 0;
+}
+@media screen and (max-width: 1023px) {
+  .header__container nav .menu li {
+    font-size: 18px;
+  }
+}
+.header__container nav .menu li.current_page_item {
+  border-radius: 500px;
+  border: 1px solid linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+  color: #fff;
+}
+
+.header__book {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+@media screen and (max-width: 1023px) {
+  .header__book {
+    display: none;
+  }
+}
+.header__book .btn {
+  color: inherit;
+  max-width: 163px;
+  width: 100%;
+}
+.header__book .btn:hover {
+  color: #fff;
+}
+
+.switch__btns {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  position: relative;
+}
+.switch__btns::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 8px);
+  left: 50%;
+  height: 16px;
+  width: 1px;
+  background-color: #fff;
+}
+
+.switch__btn {
+  background-color: transparent;
+  color: #7f868a;
+  transition: 0.3s ease;
+}
+.switch__btn.active {
+  color: #2ca656;
+}
+.switch__btn:hover {
+  color: #2ca656;
+}
+
+.burgerBtn {
+  display: none;
+}
+@media screen and (max-width: 1023px) {
+  .burgerBtn {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border: 1px solid linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+    background-color: transparent;
+    cursor: pointer;
+    position: relative;
+    right: 0;
+    border-radius: 50%;
+  }
+  .burgerBtn .btn-menu-line {
+    width: 28px;
+    height: 2px;
+    position: absolute;
+    left: 10px;
+    background-color: #2ca656;
+    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+  }
+  .burgerBtn .btn-menu-line1 {
+    top: 17px;
+  }
+  .burgerBtn .btn-menu-line3 {
+    bottom: 15px;
+  }
+  .open .burgerBtn .btn-menu-line1 {
+    transform: rotate(45deg) translate(5px, 5px) scale(1.15) rotate(92deg);
+  }
+  .open .burgerBtn .btn-menu-line2 {
+    opacity: 0;
+  }
+  .open .burgerBtn .btn-menu-line3 {
+    transform: rotate(310deg) translate(5px, -5px) scale(1.15) rotate(-86deg);
+  }
+}
+
+.footer {
+  background-color: #0e0c15;
+  color: #fff;
+}
+
+.footer__container {
+  display: flex;
+  padding: 100px 0;
+  gap: 40px;
+}
+@media screen and (max-width: 980px) {
+  .footer__container {
+    flex-direction: column;
+  }
+}
+.footer__container .logo {
+  margin-right: auto;
+  max-width: 200px;
+  width: 100%;
+}
+@media screen and (max-width: 980px) {
+  .footer__container .logo {
+    margin: 0 auto;
+  }
+}
+.footer__container .logo img {
+  width: 100%;
+}
+
+.footer__info {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  gap: 40px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__info {
+    gap: 120px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__info {
+    flex-direction: column;
+  }
+}
+
+.footer__nav {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer__nav .menu {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px 60px;
+}
+.footer__nav .menu a {
+  transition: 0.3s ease;
+}
+.footer__nav .menu a:hover {
+  color: #2ca656;
+}
+
+.footer__nav div,
+.footer__contact div,
+.footer__social div {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.footer__contact {
+  display: flex;
+  flex-direction: column;
+}
+.footer__contact div {
+  margin-bottom: 30px;
+}
+.footer__contact a {
+  padding: 5px 10px;
+  background-color: #252134;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 5px;
+  transition: 0.3s ease;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.footer__contact a:not(:last-child) {
+  margin-bottom: 5px;
+}
+.footer__contact a:hover svg rect {
+  fill: #2ca656;
+}
+.footer__contact a svg {
+  width: 37px;
+  height: 37px;
+  transition: 0.3s ease;
+}
+.footer__contact a svg rect {
+  transition: inherit;
+}
+
+.footer__social {
+  display: flex;
+  flex-direction: column;
+}
+.footer__social div:not([class]) {
+  margin-bottom: 30px;
+  width: 100%;
+}
+.footer__social .socials {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+}
+.footer__social .socials a {
+  max-width: 64px;
+  max-height: 64px;
+  width: 100%;
+  height: 100%;
+}
+.footer__social .socials a:hover svg ellipse {
+  fill: #2ca656;
+}
+.footer__social .socials a svg {
+  width: 64px;
+  height: 64px;
+  transition: 0.3s ease;
+}
+.footer__social .socials a svg ellipse {
+  transition: inherit;
+}
+
+.footer__copy {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0 20px 0;
+  position: relative;
+  gap: 10px;
+  border-top: 1px solid #fff;
+}
+@media screen and (max-width: 1023px) {
+  .footer__copy {
+    text-align: center;
+    flex-direction: column-reverse;
+  }
+}
+
+.lumious {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  max-width: 270px;
+  font-size: 12px;
+}
+
+.hero_v1 {
+  background: linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+  color: #fff;
+}
+
+.hero__top {
+  padding: 50px 0;
+  text-align: center;
+  position: relative;
+}
+.hero__top h1 {
+  margin-bottom: 10px;
+}
+.hero__top p {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.hero_v1 .hero__top {
+  padding: 66px 0 127px 0;
+}
+.hero_v1 .hero__top:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url(../image/circle.svg) center center/contain no-repeat;
+}
+
+.hero-link {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  max-width: 150px;
+  max-height: 150px;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  background-color: #0e0c15;
+  color: #fff;
+  border: 1px solid linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease;
+  z-index: 1;
+}
+.hero-link:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0px;
+  width: 0;
+  height: 0;
+  border: 0px solid #2ca656;
+  border-radius: 50%;
+  transition: 0.3s ease;
+  width: 100%;
+  height: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .hero-link {
+    max-width: 180px;
+    max-height: 180px;
+    padding: 30px;
+  }
+}
+.hero-link:hover::after {
+  top: 10px;
+  left: 10px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  border: 1.5px solid #2ca656;
+}
+
+.hero__bottom {
+  max-height: 400px;
+  height: 100%;
+}
+.hero__bottom img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1440/400;
+  max-height: 400px;
+  width: 100%;
+}
+
+.advantages__container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  position: relative;
+  align-items: start;
+}
+@media screen and (max-width: 1023px) {
+  .advantages__container {
+    flex-direction: column;
+  }
+}
+.advantages__content {
+  width: 49%;
+  position: sticky;
+  top: 150px;
+  height: 100%;
+}
+@media screen and (max-width: 1023px) {
+  .advantages__content {
+    top: 0;
+    position: static;
+    width: 100%;
+  }
+}
+.advantages__content h2 {
+  text-wrap: balance;
+}
+.advantages__scrolling_item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 64px;
+  width: 100%;
+  padding: 60px;
+  position: sticky;
+  background-color: #fff;
+  transition: all 0.4s ease-in-out 0s;
+  min-height: 228px;
+  height: 100%;
+  border-radius: 15px;
+  border: 0.5px solid #7f868a;
+}
+.advantages__scrolling_item:not(:first-of-type) {
+  margin-top: -10px;
+}
+@media screen and (min-width: 1200px) {
+  .advantages__scrolling_item {
+    gap: 144px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .advantages__scrolling_item {
+    padding: 30px 20px;
+    gap: 54px;
+  }
+}
+
+.advantages__scrolling {
+  width: 100%;
+}
+
+.scrolling_item-count {
+  max-width: 100px;
+  max-height: 100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 50%;
+  background-color: #2ca656;
+  color: #fff;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  aspect-ratio: 100/100;
+}
+.scrolling_item-count:after {
+  content: "";
+  position: absolute;
+  right: -34px;
+  width: 1px;
+  height: 97%;
+  top: calc(50% - 50px);
+  top: 0;
+  background-color: #7f868a;
+}
+@media screen and (min-width: 1200px) {
+  .scrolling_item-count:after {
+    right: -64px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .scrolling_item-count:after {
+    right: -64px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .scrolling_item-count:after {
+    right: -34px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .scrolling_item-count:after {
+    right: -20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .scrolling_item-count {
+    max-width: 85px;
+  }
+}
+
+.scrolling_item-content {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.scrolling_item-content h3 {
+  margin-bottom: 10px;
+}
+.scrolling_item-content p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.about__top {
+  text-align: center;
+  align-items: center;
+}
+.about__top h2, .about__top p {
+  max-width: 79%;
+}
+.about__top h2 {
+  margin-bottom: 10px;
+}
+.about__top p {
+  margin-bottom: 25px;
+}
+.about__top p:not(:last-child) {
+  margin-bottom: 10px;
 }/*# sourceMappingURL=style.css.map */
