--- a/assets/style/_mixin.scss
+++ b/assets/style/_mixin.scss
@@ -52,6 +52,12 @@
   font-weight: 400;
   line-height: 140%;
 }
+@mixin text-regular-xs {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 /* p (#2) */
 @mixin text-semi-medium {
   font-size: 16px;
@@ -71,4 +77,12 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+@mixin bold-xxs-text {
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
 }
