--- a/assets/style/_root.scss
+++ b/assets/style/_root.scss
@@ -44,6 +44,9 @@ body {
 //     margin-top: 130px;
 //   }
 // }
+* {
+  border: 1px solid red;
+}
 .container {
   max-width: 1340px;
   width: 100%;
@@ -217,35 +220,97 @@ h3 {
   }
 }
 
-.feature-container {
-  border-radius: 20px;
-  border: 0.5px solid $--black;
-  width: 42%;
-  background-color: $--white;
-}
-.feature-title {
+.double__img-item {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px 20px;
-  max-width: 100%;
+  justify-content: space-between;
+  border-radius: 203px;
+  border: 0.5px solid #4b4b4b;
+  background: $--white;
+  margin: 0 auto;
+  max-width: 65%;
   width: 100%;
-  border-radius: 20px 20px 0 0;
-  flex-grow: 1;
-}
-.feature-title h3 {
-  //   @include titleH4;
-}
-
-.feature-content {
-  padding: 40px 20px;
-  background-color: $--white;
-  border-radius: 0 0 20px 20px;
-  & ul {
-    // @include decorList;
+  &:nth-last-of-type(even) {
+    flex-direction: row-reverse;
+    & .double__img-item-images {
+      & img {
+        &:nth-child(1) {
+          left: 60%;
+        }
+      }
+    }
+    & .double__img_content {
+      padding: 40px 40px 40px 100px;
+      @media screen and (max-width: 767px) {
+        width: 80%;
+        padding: 20px 20px 20px 60px;
+      }
+    }
+    @media screen and (max-width: 1023px) {
+      margin-left: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 69.2%;
+  }
+  @media screen and (max-width: 1023px) {
+    margin-right: 0;
+    max-width: 80%;
+  }
+  @media screen and (max-width: 767px) {
+    align-items: center;
   }
 }
+.double__img-item-images {
+  display: flex;
+  position: relative;
 
+  & img {
+    border-radius: 50%;
+    border: 1px solid $--white;
+    z-index: 0;
+    max-width: 330px;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    filter: grayscale(100%);
+
+    &:nth-child(1) {
+      position: absolute;
+      top: 0;
+      left: -60%;
+      filter: grayscale(0%);
+      z-index: 1;
+    }
+    @media screen and (max-width: 767px) {
+      max-width: 150px;
+      aspect-ratio: 1 / 1;
+      height: auto;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    max-width: 150px;
+    aspect-ratio: 1 / 1;
+    height: fit-content;
+    align-items: center;
+  }
+}
+.double__img_content {
+  width: 59%;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 100px 40px 40px;
+  justify-content: center;
+
+  @media screen and (max-width: 767px) {
+    width: 80%;
+    padding: 20px 40px 20px 20px;
+  }
+  & h3 {
+    text-wrap: balance;
+    max-width: 330px;
+  }
+}
 .faq__container {
   & h2 {
     @media screen and (max-width: 550px) {
