--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -107,6 +107,10 @@ body {
   background: #f3f7f9;
 }
 
+* {
+  border: 1px solid red;
+}
+
 .container {
   max-width: 1340px;
   width: 100%;
@@ -335,29 +339,111 @@ h3 {
   color: linear-gradient(90deg, #51bf26 58%, #e3ae0b 86.78%);
 }
 
-.feature-container {
-  border-radius: 20px;
-  border: 0.5px solid #0e0c15;
-  width: 42%;
-  background-color: #fff;
-}
-
-.feature-title {
+.double__img-item {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px 20px;
-  max-width: 100%;
+  justify-content: space-between;
+  border-radius: 203px;
+  border: 0.5px solid #4b4b4b;
+  background: #fff;
+  margin: 0 auto;
+  max-width: 65%;
   width: 100%;
-  border-radius: 20px 20px 0 0;
-  flex-grow: 1;
+}
+.double__img-item:nth-last-of-type(even) {
+  flex-direction: row-reverse;
+}
+.double__img-item:nth-last-of-type(even) .double__img-item-images img:nth-child(1) {
+  left: 60%;
+}
+.double__img-item:nth-last-of-type(even) .double__img_content {
+  padding: 40px 40px 40px 100px;
+}
+@media screen and (max-width: 767px) {
+  .double__img-item:nth-last-of-type(even) .double__img_content {
+    width: 80%;
+    padding: 20px 20px 20px 60px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .double__img-item:nth-last-of-type(even) {
+    margin-left: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .double__img-item {
+    max-width: 69.2%;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .double__img-item {
+    margin-right: 0;
+    max-width: 80%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .double__img-item {
+    align-items: center;
+  }
 }
 
-.feature-content {
-  padding: 40px 20px;
-  background-color: #fff;
-  border-radius: 0 0 20px 20px;
+.double__img-item-images {
+  display: flex;
+  position: relative;
 }
+.double__img-item-images img {
+  border-radius: 50%;
+  border: 1px solid #fff;
+  z-index: 0;
+  max-width: 330px;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: grayscale(100%);
+}
+.double__img-item-images img:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: -60%;
+  filter: grayscale(0%);
+  z-index: 1;
+}
+@media screen and (max-width: 767px) {
+  .double__img-item-images img {
+    max-width: 150px;
+    aspect-ratio: 1/1;
+    height: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .double__img-item-images {
+    max-width: 150px;
+    aspect-ratio: 1/1;
+    height: -moz-fit-content;
+    height: fit-content;
+    align-items: center;
+  }
+}
+
+.double__img_content {
+  width: 59%;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 100px 40px 40px;
+  justify-content: center;
+}
+@media screen and (max-width: 767px) {
+  .double__img_content {
+    width: 80%;
+    padding: 20px 40px 20px 20px;
+  }
+}
+.double__img_content h3 {
+  text-wrap: balance;
+  max-width: 330px;
+}
+
 @media screen and (max-width: 550px) {
   .faq__container h2 {
     text-wrap: balance;
@@ -957,6 +1043,7 @@ h3 {
 .about__top {
   text-align: center;
   align-items: center;
+  margin-bottom: 40px;
 }
 .about__top h2, .about__top p {
   max-width: 79%;
@@ -969,4 +1056,297 @@ h3 {
 }
 .about__top p:not(:last-child) {
   margin-bottom: 10px;
+}
+
+.about__slider {
+  overflow: hidden;
+}
+
+@media screen and (min-width: 1024px) {
+  .gallerySlider {
+    margin-left: -19%;
+    margin-right: -19%;
+  }
+}
+
+.about-slide {
+  border-radius: 30px;
+  background-color: aliceblue;
+  aspect-ratio: 310/410;
+}
+.about-slide img {
+  border-radius: 30px;
+  aspect-ratio: 310/410;
+}
+.about-slide.odd img {
+  transform: rotate(-2deg);
+}
+.about-slide.even img {
+  transform: rotate(2deg);
+}
+
+.services__title {
+  margin-bottom: 40px;
+  align-items: center;
+  text-wrap: balance;
+}
+
+.services__wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.services__item {
+  display: flex;
+  justify-content: space-between;
+  border: 0.5px solid #7f868a;
+  border-radius: 15px;
+}
+@media screen and (max-width: 1023px) {
+  .services__item {
+    flex-direction: column;
+  }
+}
+
+.services__item_content {
+  width: 50%;
+  padding: 40px;
+  border-radius: 15px 0 0 15px;
+  background-color: #fff;
+  height: auto;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 1023px) {
+  .services__item_content {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .services__item_content {
+    padding: 20px;
+  }
+}
+.services__item_content h3 {
+  margin-bottom: 10px;
+}
+.services__item_content p {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  margin-bottom: 10px;
+}
+@media screen and (max-width: 1023px) {
+  .services__item_content p {
+    margin-bottom: 20px;
+  }
+}
+.services__item_content .btn {
+  max-width: 220px;
+  margin-top: auto;
+  justify-content: center;
+}
+
+.service_count {
+  border-radius: 500px;
+  background-color: #2ca656;
+  color: #fff;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 8px 25px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.service_count:before {
+  content: "";
+  width: 4px;
+  height: 4px;
+  background-color: #fff;
+  margin-right: 4px;
+  display: block;
+  border-radius: 50%;
+}
+
+.services__item_img {
+  border-radius: 15px;
+  width: 50%;
+  height: auto;
+  flex-grow: 1;
+}
+@media screen and (max-width: 1023px) {
+  .services__item_img {
+    width: 100%;
+  }
+}
+.services__item_img img {
+  border-radius: inherit;
+  aspect-ratio: 640/400;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.mission__title {
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.mission__items {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.gallery__container .btn {
+  margin: 0 auto;
+  max-width: 179px;
+}
+
+.gallery__title {
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.gallery__images {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+.gallery__images img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1/1;
+  max-height: 400px;
+  border-radius: 15px;
+  width: 100%;
+}
+@media screen and (min-width: 1024px) {
+  .gallery__images img:nth-child(n+2) {
+    width: calc(25% - 10px);
+  }
+  .gallery__images img:nth-child(5n+1) {
+    width: calc(50% - 10px);
+  }
+}
+@media screen and (max-width: 1023px) {
+  .gallery__images img {
+    max-height: 100%;
+  }
+}
+@media screen and (max-width: 1023px) and (min-width: 767px) {
+  .gallery__images img:nth-child(3n+1) {
+    width: 100%;
+  }
+  .gallery__images img:nth-child(3n+2), .gallery__images img:nth-child(3n+3) {
+    width: calc(50% - 10px);
+  }
+}
+
+.news__container .btn {
+  margin: 0 auto;
+}
+
+.news__title {
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.news__item {
+  height: auto;
+  transition: 0.3s linear;
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+}
+
+.news__item:hover > .news__item_bottom {
+  color: #fff;
+  background-color: #2ca656;
+  border-color: transparent;
+}
+.news__item:hover > .news__item_bottom .news__more {
+  color: #fff;
+}
+
+.news__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+.news__link img {
+  border-radius: 10px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+}
+
+.news__item_bottom {
+  padding: 20px 30px;
+  border-radius: 10px;
+  border: 0.5px solid #7f868a;
+  background: #fff;
+  cursor: pointer;
+  flex-grow: 1;
+  transition: 0.3s linear;
+}
+.news__item_bottom p {
+  margin-bottom: 15px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.news__date {
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.news__more {
+  color: #2ca656;
+  transition: 0.3s linear;
+  text-decoration: underline;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: auto;
+}
+.news__more:hover {
+  text-decoration: none;
+}
+
+.news__wrap {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 1023px) {
+  .news__wrap {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 767px) {
+  .news__wrap {
+    display: flex;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
