--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -7,3 +7,7 @@
 @import "./hero";
 @import "./advantages";
 @import "./about";
+@import "./services";
+@import "./mission";
+@import "./gallery";
+@import "./news";
