add faq section

--- a/assets/style/_root.scss
+++ b/assets/style/_root.scss
@@ -44,9 +44,9 @@ body {
 //     margin-top: 130px;
 //   }
 // }
-* {
-  border: 1px solid red;
-}
+// * {
+//   border: 1px solid red;
+// }
 .container {
   max-width: 1340px;
   width: 100%;
