--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,7 +1,7 @@
 @import "./reset";
 @import "./mixin";
 @import "./root";
-
+@import "./accordeon";
 @import "./header";
 @import "./footer";
 @import "./hero";
@@ -11,3 +11,4 @@
 @import "./mission";
 @import "./gallery";
 @import "./news";
+@import "./faq";
