--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -107,10 +107,6 @@ body {
   background: #f3f7f9;
 }
 
-* {
-  border: 1px solid red;
-}
-
 .container {
   max-width: 1340px;
   width: 100%;
@@ -473,6 +469,129 @@ h3 {
   .main-content {
     width: 100%;
   }
+}
+
+.accord {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+  gap: 10px;
+}
+
+.accord-item {
+  max-width: 100%;
+  width: 100%;
+  border: 1px solid #7f868a;
+  background-color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.accord-item:nth-last-of-type(1) {
+  border-bottom: 1px solid #7f868a;
+}
+.accord-item-top {
+  max-width: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  justify-content: space-between;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding: 20px 30px;
+}
+@media screen and (max-width: 767px) {
+  .accord-item-top {
+    padding: 30px 20px;
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 367px) {
+  .accord-item-top {
+    gap: 20px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    white-space: pre-wrap;
+  }
+}
+.accord-item-top p {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  white-space: pre-wrap;
+  margin-bottom: 0;
+}
+@media screen and (max-width: 367px) {
+  .accord-item-top p {
+    overflow-wrap: anywhere;
+  }
+}
+.accord-item-top .close {
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  transition: all 0.3s linear;
+  background-color: #0e0c15;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.accord-item-top .close svg {
+  transform: rotate(45deg);
+  transition: 0.3s linear;
+  max-width: 25px;
+  max-height: 25px;
+}
+.accord-item-bottom {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s linear;
+  padding: 0px 30px;
+}
+.accord-item-bottom p {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  margin-bottom: 0;
+}
+
+.accord-item:hover,
+.accord-item.active {
+  border: 0.5px solid transparent;
+  border-radius: 15px;
+  background: linear-gradient(to right, white, white), linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+  background-clip: padding-box, border-box;
+  background-origin: padding-box, border-box; /* will have no effect */
+}
+
+.accord-item.active .accord-item-bottom {
+  color: #0e0c15;
+  opacity: 1;
+  max-height: 100vh;
+  overflow: visible;
+  padding: 30px;
+  margin-top: -30px;
+  border-radius: 0 0 10px 10px;
+}
+@media screen and (max-width: 767px) {
+  .accord-item.active .accord-item-bottom {
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 367px) {
+  .accord-item.active .accord-item-bottom {
+    padding: 10px;
+  }
+}
+
+.accord-item.active .accord-item-top svg {
+  transform: rotate(0deg);
 }
 
 .header {
