--- a/assets/style/_accordeon.scss
+++ b/assets/style/_accordeon.scss
@@ -47,8 +47,8 @@
       }
     }
     & .close {
-      width: 30px;
-      height: 30px;
+      min-width: 30px;
+      min-height: 30px;
       border-radius: 5px;
       transition: all 0.3s linear;
       background-color: $--black;
@@ -56,7 +56,7 @@
 	  align-items: center;
 	  justify-content: center;
       & svg {
-        transform: rotate(45deg);
+        transform: rotate(-45deg);
         transition: 0.3s linear;
 		max-width: 25px;
 		max-height: 25px;
