--- a/assets/style/_hero.scss
+++ b/assets/style/_hero.scss
@@ -1,10 +1,13 @@
-.hero_v1 {
+.hero {
   background: $--background;
   color: $--white;
+  & .hero__container{
+	padding: 50px 0;
+  }
 }
 
 .hero__top {
-  padding: 50px 0;
+ 
   text-align: center;
   position: relative;
   & h1 {
@@ -47,18 +50,23 @@
   justify-content: center;
   transition: 0.3s ease;
   z-index: 1;
+  @media screen and (max-width:767px) {
+	top: 68%;
+  }
+  @media screen and (max-width:550px) {
+	top: 77%;
+  }
   &:after {
     content: "";
     position: absolute;
     top: 0;
     left: 0px;
-    width: 0;
-    height: 0;
     border: 0px solid $--green;
     border-radius: 50%;
     transition: 0.3s ease;
     width: 100%;
     height: 100%;
+	animation: heroAnimation 2s linear infinite;
   }
   @media screen and (min-width: 1200px) {
     max-width: 180px;
@@ -78,10 +86,40 @@
 .hero__bottom {
   max-height: 400px;
   height: 100%;
+  @media screen and (max-width:1023px) {
+	min-height: 360px;
+  }
   & img {
     object-fit: cover;
     aspect-ratio: 1440 / 400;
     max-height: 400px;
     width: 100%;
+	@media screen and (max-width:1023px) {
+		min-height: 360px;
+	  }
   }
+}
+
+@keyframes heroAnimation {
+	0%{
+		top: 0;
+    left: 0px;
+		width: 100%;
+		height: 100%;
+		border: 0px solid $--green;
+	}
+	50%{
+		top: 10px;
+		left: 10px;
+		width: calc(100% - 20px);
+		height: calc(100% - 20px);
+		border: 1.5px solid $--green;
+	}
+	100%{
+		top: 0;
+    left: 0px;
+		width: 100%;
+		height: 100%;
+		border: 0px solid $--green;
+	}
 }
