--- a/assets/style/_mixin.scss
+++ b/assets/style/_mixin.scss
@@ -15,6 +15,9 @@
     text-transform: none;
     font: inherit;
   }
+  @media screen and (max-width:375px) {
+	font-size: 28px;
+  }
 }
 @mixin titleH2 {
   font-size: 36px;
@@ -28,6 +31,9 @@
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+  @media screen and (max-width:375px) {
+	font-size: 24px;
   }
 }
 
