--- a/assets/style/_news.scss
+++ b/assets/style/_news.scss
@@ -27,6 +27,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 10px;
+  max-height: 275px;
   width: 100%;
   height: 100%;
   & img {
@@ -34,6 +35,9 @@
     width: 100%;
     object-fit: cover;
     height: 100%;
+    max-height: 275px;
+    object-fit: cover;
+    object-position: 100% 20%;
   }
 }
 .news__item_bottom {
