--- a/assets/style/_root.scss
+++ b/assets/style/_root.scss
@@ -31,7 +31,7 @@ $--green: #2ca656;
 $--gray-text: #7f868a;
 $--dark-gray: #252134;
 $--background: linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
-$--border: 1px solid $--background;
+$--border: 1px solid $--green;
 body {
   font-family: "Manrope";
   font-size: 14px;
@@ -134,52 +134,8 @@ h3 {
     }
   }
 }
-.title-center {
-  text-align: center;
-  margin-bottom: 40px;
-}
-.title-center-page {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 5px;
-  margin-bottom: 40px;
-}
-.title-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 40px;
-  margin-bottom: 40px;
-  @media screen and (max-width: 767px) {
-    flex-direction: column;
-  }
-}
-.grid-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  align-items: stretch;
-  height: 100%;
-  margin-bottom: 40px;
 
-  @media screen and (max-width: 550px) {
-    flex-direction: column;
-  }
-}
-.grid-item {
-  width: calc((100% / 4) - 15px);
-  @media screen and (max-width: 1023px) {
-    width: calc((100% / 3) - 15px);
-  }
-  @media screen and (max-width: 767px) {
-    width: calc((100% / 2) - 10px);
-  }
-  @media screen and (max-width: 550px) {
-    width: 100%;
-  }
-}
+
 
 .contact__wrap {
   display: flex;
@@ -207,10 +163,11 @@ h3 {
 
 .breadcrumbs {
   padding: 5px 0;
-  margin-bottom: 60px;
+  margin-bottom: 10px;
   &__wrap {
     display: flex;
     align-items: center;
+	justify-content: center;
     gap: 5px;
     flex-wrap: wrap;
   }
@@ -231,33 +188,57 @@ h3 {
   width: 100%;
   &:nth-last-of-type(even) {
     flex-direction: row-reverse;
+	@media screen and (max-width: 1023px) and (min-width:768px) {
+		margin-left: 0;
+	  }
+	@media screen and (max-width: 767px) {
+		flex-direction: column;
+		border-radius: 0;
+	  border: none;
+	  background-color: transparent;
+	  align-items: center;
+	  }
     & .double__img-item-images {
       & img {
         &:nth-child(1) {
           left: 60%;
         }
+		
       }
+	  @media screen and (max-width:767px) {
+		margin-right: auto;
+		margin-left: 0;
+	}
     }
     & .double__img_content {
       padding: 40px 40px 40px 100px;
       @media screen and (max-width: 767px) {
-        width: 80%;
-        padding: 20px 20px 20px 60px;
-      }
+		width: 100%;
+		padding: 40px;
+		background-color: $--white;
+		border-radius: 500px;
+		border: .5px solid $--gray-text;
+	  }
+	  @media screen and (max-width:550px) {
+		border-radius: 30px;
+	  }
     }
-    @media screen and (max-width: 1023px) {
-      margin-left: 0;
-    }
+    
   }
   @media screen and (min-width: 1200px) {
     max-width: 69.2%;
   }
-  @media screen and (max-width: 1023px) {
+  @media screen and (max-width: 1023px) and (min-width:768px) {
     margin-right: 0;
     max-width: 80%;
   }
   @media screen and (max-width: 767px) {
-    align-items: center;
+    flex-direction: column;
+	border-radius: 0;
+  border: none;
+  background-color: transparent;
+  align-items: center;
+  max-width: 100%;
   }
 }
 .double__img-item-images {
@@ -293,6 +274,8 @@ h3 {
     aspect-ratio: 1 / 1;
     height: fit-content;
     align-items: center;
+	margin-bottom: 20px;
+	margin-left: auto;
   }
 }
 .double__img_content {
@@ -303,8 +286,14 @@ h3 {
   justify-content: center;
 
   @media screen and (max-width: 767px) {
-    width: 80%;
-    padding: 20px 40px 20px 20px;
+    width: 100%;
+    padding: 40px;
+	background-color: $--white;
+	border-radius: 500px;
+	border: .5px solid $--gray-text;
+  }
+  @media screen and (max-width:550px) {
+	border-radius: 30px;
   }
   & h3 {
     text-wrap: balance;
