--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -126,6 +126,11 @@ h1 span {
   text-transform: none;
   font: inherit;
 }
+@media screen and (max-width: 375px) {
+  h1 {
+    font-size: 28px;
+  }
+}
 
 h2 {
   font-size: 36px;
@@ -140,6 +145,11 @@ h2 span {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+@media screen and (max-width: 375px) {
+  h2 {
+    font-size: 24px;
+  }
 }
 
 h3 {
@@ -235,66 +245,6 @@ h3 {
   color: #2ca656;
 }
 
-.title-center {
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.title-center-page {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 5px;
-  margin-bottom: 40px;
-}
-
-.title-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 40px;
-  margin-bottom: 40px;
-}
-@media screen and (max-width: 767px) {
-  .title-row {
-    flex-direction: column;
-  }
-}
-
-.grid-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  align-items: stretch;
-  height: 100%;
-  margin-bottom: 40px;
-}
-@media screen and (max-width: 550px) {
-  .grid-container {
-    flex-direction: column;
-  }
-}
-
-.grid-item {
-  width: calc(25% - 15px);
-}
-@media screen and (max-width: 1023px) {
-  .grid-item {
-    width: calc(33.3333333333% - 15px);
-  }
-}
-@media screen and (max-width: 767px) {
-  .grid-item {
-    width: calc(50% - 10px);
-  }
-}
-@media screen and (max-width: 550px) {
-  .grid-item {
-    width: 100%;
-  }
-}
-
 .contact__wrap {
   display: flex;
   align-items: start;
@@ -322,11 +272,12 @@ h3 {
 
 .breadcrumbs {
   padding: 5px 0;
-  margin-bottom: 60px;
+  margin-bottom: 10px;
 }
 .breadcrumbs__wrap {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 5px;
   flex-wrap: wrap;
 }
@@ -348,21 +299,44 @@ h3 {
 .double__img-item:nth-last-of-type(even) {
   flex-direction: row-reverse;
 }
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .double__img-item:nth-last-of-type(even) {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .double__img-item:nth-last-of-type(even) {
+    flex-direction: column;
+    border-radius: 0;
+    border: none;
+    background-color: transparent;
+    align-items: center;
+  }
+}
 .double__img-item:nth-last-of-type(even) .double__img-item-images img:nth-child(1) {
   left: 60%;
+}
+@media screen and (max-width: 767px) {
+  .double__img-item:nth-last-of-type(even) .double__img-item-images {
+    margin-right: auto;
+    margin-left: 0;
+  }
 }
 .double__img-item:nth-last-of-type(even) .double__img_content {
   padding: 40px 40px 40px 100px;
 }
 @media screen and (max-width: 767px) {
   .double__img-item:nth-last-of-type(even) .double__img_content {
-    width: 80%;
-    padding: 20px 20px 20px 60px;
+    width: 100%;
+    padding: 40px;
+    background-color: #fff;
+    border-radius: 500px;
+    border: 0.5px solid #7f868a;
   }
 }
-@media screen and (max-width: 1023px) {
-  .double__img-item:nth-last-of-type(even) {
-    margin-left: 0;
+@media screen and (max-width: 550px) {
+  .double__img-item:nth-last-of-type(even) .double__img_content {
+    border-radius: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -370,7 +344,7 @@ h3 {
     max-width: 69.2%;
   }
 }
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .double__img-item {
     margin-right: 0;
     max-width: 80%;
@@ -378,7 +352,12 @@ h3 {
 }
 @media screen and (max-width: 767px) {
   .double__img-item {
+    flex-direction: column;
+    border-radius: 0;
+    border: none;
+    background-color: transparent;
     align-items: center;
+    max-width: 100%;
   }
 }
 
@@ -419,6 +398,8 @@ h3 {
     height: -moz-fit-content;
     height: fit-content;
     align-items: center;
+    margin-bottom: 20px;
+    margin-left: auto;
   }
 }
 
@@ -431,8 +412,16 @@ h3 {
 }
 @media screen and (max-width: 767px) {
   .double__img_content {
-    width: 80%;
-    padding: 20px 40px 20px 20px;
+    width: 100%;
+    padding: 40px;
+    background-color: #fff;
+    border-radius: 500px;
+    border: 0.5px solid #7f868a;
+  }
+}
+@media screen and (max-width: 550px) {
+  .double__img_content {
+    border-radius: 30px;
   }
 }
 .double__img_content h3 {
@@ -680,7 +669,7 @@ h3 {
 }
 .header__container nav .menu li.current_page_item {
   border-radius: 500px;
-  border: 1px solid linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+  border: 1px solid #2ca656;
   color: #fff;
 }
 
@@ -739,7 +728,7 @@ h3 {
     display: block;
     width: 50px;
     height: 50px;
-    border: 1px solid linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+    border: 1px solid #2ca656;
     background-color: transparent;
     cursor: pointer;
     position: relative;
@@ -933,13 +922,15 @@ h3 {
   font-size: 12px;
 }
 
-.hero_v1 {
+.hero {
   background: linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
   color: #fff;
 }
+.hero .hero__container {
+  padding: 50px 0;
+}
 
 .hero__top {
-  padding: 50px 0;
   text-align: center;
   position: relative;
 }
@@ -977,7 +968,7 @@ h3 {
   padding: 15px;
   background-color: #0e0c15;
   color: #fff;
-  border: 1px solid linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
+  border: 1px solid #2ca656;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -989,18 +980,27 @@ h3 {
   transition: 0.3s ease;
   z-index: 1;
 }
+@media screen and (max-width: 767px) {
+  .hero-link {
+    top: 68%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .hero-link {
+    top: 77%;
+  }
+}
 .hero-link:after {
   content: "";
   position: absolute;
   top: 0;
   left: 0px;
-  width: 0;
-  height: 0;
   border: 0px solid #2ca656;
   border-radius: 50%;
   transition: 0.3s ease;
   width: 100%;
   height: 100%;
+  animation: heroAnimation 2s linear infinite;
 }
 @media screen and (min-width: 1200px) {
   .hero-link {
@@ -1021,6 +1021,11 @@ h3 {
   max-height: 400px;
   height: 100%;
 }
+@media screen and (max-width: 1023px) {
+  .hero__bottom {
+    min-height: 360px;
+  }
+}
 .hero__bottom img {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1028,7 +1033,35 @@ h3 {
   max-height: 400px;
   width: 100%;
 }
+@media screen and (max-width: 1023px) {
+  .hero__bottom img {
+    min-height: 360px;
+  }
+}
 
+@keyframes heroAnimation {
+  0% {
+    top: 0;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 0px solid #2ca656;
+  }
+  50% {
+    top: 10px;
+    left: 10px;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    border: 1.5px solid #2ca656;
+  }
+  100% {
+    top: 0;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 0px solid #2ca656;
+  }
+}
 .advantages__container {
   display: flex;
   flex-direction: row;
@@ -1084,6 +1117,11 @@ h3 {
   .advantages__scrolling_item {
     padding: 30px 20px;
     gap: 54px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .advantages__scrolling_item {
+    gap: 34px;
   }
 }
 
@@ -1145,6 +1183,12 @@ h3 {
     max-width: 85px;
   }
 }
+@media screen and (max-width: 550px) {
+  .scrolling_item-count {
+    max-width: 65px;
+    font-size: 26px;
+  }
+}
 
 .scrolling_item-content {
   width: 70%;
@@ -1182,7 +1226,7 @@ h3 {
 }
 
 @media screen and (min-width: 1024px) {
-  .gallerySlider {
+  .aboutSlider {
     margin-left: -19%;
     margin-right: -19%;
   }
@@ -1304,6 +1348,7 @@ h3 {
 @media screen and (max-width: 1023px) {
   .services__item_img {
     width: 100%;
+    aspect-ratio: 640/400;
   }
 }
 .services__item_img img {
@@ -1333,6 +1378,42 @@ h3 {
 .gallery__title {
   align-items: center;
   margin-bottom: 40px;
+}
+
+.gallery__container_btns {
+  display: flex;
+  gap: 10px;
+  overflow: hidden;
+}
+@media screen and (max-width: 767px) {
+  .gallery__container_btns {
+    overflow-x: auto;
+  }
+}
+
+.gallery__container_btns-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 40px;
+  border: 1px solid #2ca656;
+  color: #2ca656;
+  background-color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border-radius: 500px;
+  margin-bottom: 40px;
+}
+.gallery__container_btns-btn.active-tab {
+  background-color: #2ca656;
+  color: #fff;
+}
+@media screen and (max-width: 767px) {
+  .gallery__container_btns-btn {
+    white-space: nowrap;
+  }
 }
 
 .gallery__images {
@@ -1402,6 +1483,7 @@ h3 {
   align-items: center;
   justify-content: center;
   border-radius: 10px;
+  max-height: 275px;
   width: 100%;
   height: 100%;
 }
@@ -1411,6 +1493,10 @@ h3 {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
+  max-height: 275px;
+  object-fit: cover;
+  -o-object-position: 100% 20%;
+     object-position: 100% 20%;
 }
 
 .news__item_bottom {
