--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -12,3 +12,7 @@
 @import "./gallery";
 @import "./news";
 @import "./faq";
+@import './achievements';
+@import './vision';
+@import './who';
+@import './events';
