--- a/assets/style/_root.scss
+++ b/assets/style/_root.scss
@@ -135,6 +135,117 @@ h3 {
   }
 }
 
+.scrolling__title {
+    width: 49%;
+    position: sticky;
+    top: 150px;
+    height: 100%;
+    @media screen and (max-width: 1023px) {
+      top: 0;
+      position: static;
+      width: 100%;
+    }
+    & h2 {
+      text-wrap: balance;
+    }
+  }
+
+  .scrolling_item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 64px;
+    width: 100%;
+    padding: 60px;
+    position: sticky;
+    background-color: $--white;
+    transition: all 0.4s ease-in-out 0s;
+    min-height: 228px;
+    height: 100%;
+    border-radius: 15px;
+    border: 0.5px solid $--gray-text;
+    &:not(:first-of-type) {
+      margin-top: -10px;
+    }
+    @media screen and (min-width: 1200px) {
+      gap: 144px;
+    }
+    @media screen and (max-width: 767px) {
+      padding: 30px 20px;
+      gap: 54px;
+    }
+    @media screen and (max-width: 550px) {
+     
+      gap: 34px;
+    }
+  }
+
+.scrolling {
+  width: 100%;
+}
+
+.scrolling_item-count {
+  max-width: 100px;
+  max-height: 100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 50%;
+  background-color: $--green;
+  color: $--white;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  aspect-ratio: 100 / 100;
+  &:after {
+    content: "";
+    position: absolute;
+    right: -34px;
+    width: 1px;
+    height: 97%;
+    top: calc(50% - 50px);
+    top: 0;
+    background-color: $--gray-text;
+    @media screen and (min-width: 1200px) {
+      right: -64px;
+    }
+    @media screen and (max-width: 1023px) {
+      right: -64px;
+    }
+    @media screen and (max-width: 767px) {
+      right: -34px;
+    }
+    @media screen and (max-width: 550px) {
+      right: -20px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    max-width: 85px;
+  }
+  @media screen and (max-width: 550px) {
+    max-width: 65px;
+	font-size: 26px;
+  }
+}
+.scrolling_item-content {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  & h3 {
+    margin-bottom: 10px;
+  }
+  & p {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+}
 
 
 .contact__wrap {
@@ -186,7 +297,10 @@ h3 {
   margin: 0 auto;
   max-width: 65%;
   width: 100%;
-  &:nth-last-of-type(even) {
+  &:nth-of-type(odd){
+	flex-direction:row;
+  }
+  &:nth-of-type(even) {
     flex-direction: row-reverse;
 	@media screen and (max-width: 1023px) and (min-width:768px) {
 		margin-left: 0;
@@ -201,7 +315,7 @@ h3 {
     & .double__img-item-images {
       & img {
         &:nth-child(1) {
-          left: 60%;
+          left: 0;
         }
 		
       }
@@ -233,6 +347,15 @@ h3 {
     max-width: 80%;
   }
   @media screen and (max-width: 767px) {
+	&:nth-of-type(odd),
+	&:nth-of-type(even){
+		flex-direction: column;
+		border-radius: 0;
+	  border: none;
+	  background-color: transparent;
+	  align-items: center;
+	  max-width: 100%;
+	}
     flex-direction: column;
 	border-radius: 0;
   border: none;
@@ -260,6 +383,7 @@ h3 {
       position: absolute;
       top: 0;
       left: -60%;
+      left: 0;
       filter: grayscale(0%);
       z-index: 1;
     }
@@ -312,6 +436,30 @@ h3 {
     }
   }
 }
+
+.green {
+	border-radius: 500px;
+	background-color: $--green;
+	color: $--white;
+	@include bold-xxs-text;
+	max-width: fit-content;
+	padding: 8px 25px;
+	display: flex;
+	align-items: center;
+	margin-bottom: 10px;
+	&:before {
+	  content: "";
+	  width: 4px;
+	  height: 4px;
+	  background-color: $--white;
+	  margin-right: 4px;
+	  display: block;
+	  border-radius: 50%;
+	}
+  }
+
+
+
 .page-main {
   display: flex;
   gap: 40px;
@@ -327,3 +475,25 @@ h3 {
 }
 
 
+.animated{
+	animation: img-animate 2s linear forwards;
+}
+.reverse-animated{
+	animation: reverse-img-animate 2s linear forwards;
+}
+@keyframes img-animate {
+	0%{
+		left: 0;
+	}
+	100%{
+		left: -60%;
+	}
+}
+@keyframes reverse-img-animate {
+	0%{
+		left: 0;
+	}
+	100%{
+		left: 60%;
+	}
+}
