--- a/assets/style/_services.scss
+++ b/assets/style/_services.scss
@@ -50,26 +50,7 @@
     justify-content: center;
   }
 }
-.service_count {
-  border-radius: 500px;
-  background-color: $--green;
-  color: $--white;
-  @include bold-xxs-text;
-  max-width: fit-content;
-  padding: 8px 25px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-  &:before {
-    content: "";
-    width: 4px;
-    height: 4px;
-    background-color: $--white;
-    margin-right: 4px;
-    display: block;
-    border-radius: 50%;
-  }
-}
+
 .services__item_img {
   border-radius: 15px;
   width: 50%;
@@ -84,5 +65,6 @@
     aspect-ratio: 640 / 400;
     height: 100%;
     object-fit: cover;
+	filter: grayscale(100%);
   }
 }
