--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -74,6 +74,7 @@ button {
 
 /* H3 */
 /* p (#2) */
+/* p (#6) */
 @font-face {
   font-family: "Manrope";
   src: url(../fonts/Manrope-Regular.ttf);
@@ -245,6 +246,136 @@ h3 {
   color: #2ca656;
 }
 
+.scrolling__title {
+  width: 49%;
+  position: sticky;
+  top: 150px;
+  height: 100%;
+}
+@media screen and (max-width: 1023px) {
+  .scrolling__title {
+    top: 0;
+    position: static;
+    width: 100%;
+  }
+}
+.scrolling__title h2 {
+  text-wrap: balance;
+}
+
+.scrolling_item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 64px;
+  width: 100%;
+  padding: 60px;
+  position: sticky;
+  background-color: #fff;
+  transition: all 0.4s ease-in-out 0s;
+  min-height: 228px;
+  height: 100%;
+  border-radius: 15px;
+  border: 0.5px solid #7f868a;
+}
+.scrolling_item:not(:first-of-type) {
+  margin-top: -10px;
+}
+@media screen and (min-width: 1200px) {
+  .scrolling_item {
+    gap: 144px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .scrolling_item {
+    padding: 30px 20px;
+    gap: 54px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .scrolling_item {
+    gap: 34px;
+  }
+}
+
+.scrolling {
+  width: 100%;
+}
+
+.scrolling_item-count {
+  max-width: 100px;
+  max-height: 100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 50%;
+  background-color: #2ca656;
+  color: #fff;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  aspect-ratio: 100/100;
+}
+.scrolling_item-count:after {
+  content: "";
+  position: absolute;
+  right: -34px;
+  width: 1px;
+  height: 97%;
+  top: calc(50% - 50px);
+  top: 0;
+  background-color: #7f868a;
+}
+@media screen and (min-width: 1200px) {
+  .scrolling_item-count:after {
+    right: -64px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .scrolling_item-count:after {
+    right: -64px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .scrolling_item-count:after {
+    right: -34px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .scrolling_item-count:after {
+    right: -20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .scrolling_item-count {
+    max-width: 85px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .scrolling_item-count {
+    max-width: 65px;
+    font-size: 26px;
+  }
+}
+
+.scrolling_item-content {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.scrolling_item-content h3 {
+  margin-bottom: 10px;
+}
+.scrolling_item-content p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .contact__wrap {
   display: flex;
   align-items: start;
@@ -296,16 +427,19 @@ h3 {
   max-width: 65%;
   width: 100%;
 }
-.double__img-item:nth-last-of-type(even) {
+.double__img-item:nth-of-type(odd) {
+  flex-direction: row;
+}
+.double__img-item:nth-of-type(even) {
   flex-direction: row-reverse;
 }
 @media screen and (max-width: 1023px) and (min-width: 768px) {
-  .double__img-item:nth-last-of-type(even) {
+  .double__img-item:nth-of-type(even) {
     margin-left: 0;
   }
 }
 @media screen and (max-width: 767px) {
-  .double__img-item:nth-last-of-type(even) {
+  .double__img-item:nth-of-type(even) {
     flex-direction: column;
     border-radius: 0;
     border: none;
@@ -313,20 +447,20 @@ h3 {
     align-items: center;
   }
 }
-.double__img-item:nth-last-of-type(even) .double__img-item-images img:nth-child(1) {
-  left: 60%;
+.double__img-item:nth-of-type(even) .double__img-item-images img:nth-child(1) {
+  left: 0;
 }
 @media screen and (max-width: 767px) {
-  .double__img-item:nth-last-of-type(even) .double__img-item-images {
+  .double__img-item:nth-of-type(even) .double__img-item-images {
     margin-right: auto;
     margin-left: 0;
   }
 }
-.double__img-item:nth-last-of-type(even) .double__img_content {
+.double__img-item:nth-of-type(even) .double__img_content {
   padding: 40px 40px 40px 100px;
 }
 @media screen and (max-width: 767px) {
-  .double__img-item:nth-last-of-type(even) .double__img_content {
+  .double__img-item:nth-of-type(even) .double__img_content {
     width: 100%;
     padding: 40px;
     background-color: #fff;
@@ -335,7 +469,7 @@ h3 {
   }
 }
 @media screen and (max-width: 550px) {
-  .double__img-item:nth-last-of-type(even) .double__img_content {
+  .double__img-item:nth-of-type(even) .double__img_content {
     border-radius: 30px;
   }
 }
@@ -352,6 +486,14 @@ h3 {
 }
 @media screen and (max-width: 767px) {
   .double__img-item {
+    flex-direction: column;
+    border-radius: 0;
+    border: none;
+    background-color: transparent;
+    align-items: center;
+    max-width: 100%;
+  }
+  .double__img-item:nth-of-type(odd), .double__img-item:nth-of-type(even) {
     flex-direction: column;
     border-radius: 0;
     border: none;
@@ -381,6 +523,7 @@ h3 {
   position: absolute;
   top: 0;
   left: -60%;
+  left: 0;
   filter: grayscale(0%);
   z-index: 1;
 }
@@ -441,6 +584,32 @@ h3 {
   }
 }
 
+.green {
+  border-radius: 500px;
+  background-color: #2ca656;
+  color: #fff;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 8px 25px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.green:before {
+  content: "";
+  width: 4px;
+  height: 4px;
+  background-color: #fff;
+  margin-right: 4px;
+  display: block;
+  border-radius: 50%;
+}
+
 .page-main {
   display: flex;
   gap: 40px;
@@ -460,6 +629,30 @@ h3 {
   }
 }
 
+.animated {
+  animation: img-animate 2s linear forwards;
+}
+
+.reverse-animated {
+  animation: reverse-img-animate 2s linear forwards;
+}
+
+@keyframes img-animate {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: -60%;
+  }
+}
+@keyframes reverse-img-animate {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: 60%;
+  }
+}
 .accord {
   display: flex;
   flex-direction: column;
@@ -926,7 +1119,7 @@ h3 {
   background: linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
   color: #fff;
 }
-.hero .hero__container {
+.hero.hero_v2 .hero__container {
   padding: 50px 0;
 }
 
@@ -1017,16 +1210,16 @@ h3 {
   border: 1.5px solid #2ca656;
 }
 
-.hero__bottom {
+.hero_v1 .hero__bottom {
   max-height: 400px;
   height: 100%;
 }
 @media screen and (max-width: 1023px) {
-  .hero__bottom {
+  .hero_v1 .hero__bottom {
     min-height: 360px;
   }
 }
-.hero__bottom img {
+.hero_v1 .hero__bottom img {
   -o-object-fit: cover;
      object-fit: cover;
   aspect-ratio: 1440/400;
@@ -1034,7 +1227,7 @@ h3 {
   width: 100%;
 }
 @media screen and (max-width: 1023px) {
-  .hero__bottom img {
+  .hero_v1 .hero__bottom img {
     min-height: 360px;
   }
 }
@@ -1073,134 +1266,6 @@ h3 {
   .advantages__container {
     flex-direction: column;
   }
-}
-.advantages__content {
-  width: 49%;
-  position: sticky;
-  top: 150px;
-  height: 100%;
-}
-@media screen and (max-width: 1023px) {
-  .advantages__content {
-    top: 0;
-    position: static;
-    width: 100%;
-  }
-}
-.advantages__content h2 {
-  text-wrap: balance;
-}
-.advantages__scrolling_item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 64px;
-  width: 100%;
-  padding: 60px;
-  position: sticky;
-  background-color: #fff;
-  transition: all 0.4s ease-in-out 0s;
-  min-height: 228px;
-  height: 100%;
-  border-radius: 15px;
-  border: 0.5px solid #7f868a;
-}
-.advantages__scrolling_item:not(:first-of-type) {
-  margin-top: -10px;
-}
-@media screen and (min-width: 1200px) {
-  .advantages__scrolling_item {
-    gap: 144px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .advantages__scrolling_item {
-    padding: 30px 20px;
-    gap: 54px;
-  }
-}
-@media screen and (max-width: 550px) {
-  .advantages__scrolling_item {
-    gap: 34px;
-  }
-}
-
-.advantages__scrolling {
-  width: 100%;
-}
-
-.scrolling_item-count {
-  max-width: 100px;
-  max-height: 100px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  border-radius: 50%;
-  background-color: #2ca656;
-  color: #fff;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  text-transform: uppercase;
-  aspect-ratio: 100/100;
-}
-.scrolling_item-count:after {
-  content: "";
-  position: absolute;
-  right: -34px;
-  width: 1px;
-  height: 97%;
-  top: calc(50% - 50px);
-  top: 0;
-  background-color: #7f868a;
-}
-@media screen and (min-width: 1200px) {
-  .scrolling_item-count:after {
-    right: -64px;
-  }
-}
-@media screen and (max-width: 1023px) {
-  .scrolling_item-count:after {
-    right: -64px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .scrolling_item-count:after {
-    right: -34px;
-  }
-}
-@media screen and (max-width: 550px) {
-  .scrolling_item-count:after {
-    right: -20px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .scrolling_item-count {
-    max-width: 85px;
-  }
-}
-@media screen and (max-width: 550px) {
-  .scrolling_item-count {
-    max-width: 65px;
-    font-size: 26px;
-  }
-}
-
-.scrolling_item-content {
-  width: 70%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.scrolling_item-content h3 {
-  margin-bottom: 10px;
-}
-.scrolling_item-content p:not(:last-child) {
-  margin-bottom: 10px;
 }
 
 .about__top {
@@ -1246,6 +1311,87 @@ h3 {
 }
 .about-slide.even img {
   transform: rotate(2deg);
+}
+
+.about_v2__container {
+  display: flex;
+  align-content: stretch;
+  gap: 40px;
+}
+@media screen and (max-width: 1023px) {
+  .about_v2__container {
+    flex-direction: column-reverse;
+  }
+}
+
+.about_v2_img {
+  width: 40%;
+  height: auto;
+  border-radius: 30px;
+}
+@media screen and (max-width: 1023px) {
+  .about_v2_img {
+    width: 100%;
+    max-height: 100%;
+  }
+}
+.about_v2_img img {
+  height: 100%;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: inherit;
+}
+
+.about_v2_content {
+  width: 59%;
+}
+@media screen and (max-width: 1023px) {
+  .about_v2_content {
+    width: 100%;
+  }
+}
+
+.about_v2__title {
+  margin-bottom: 30px;
+  text-wrap: balance;
+}
+
+.about_v2_text {
+  padding: 40px 70px;
+  border: 1px solid #7f868a;
+  border-radius: 20px;
+}
+@media screen and (max-width: 550px) {
+  .about_v2_text {
+    padding: 20px 41px;
+  }
+}
+.about_v2_text p {
+  margin-bottom: 20px;
+  position: relative;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+.about_v2_text p:nth-last-of-type(1) {
+  margin-bottom: 0;
+}
+.about_v2_text p:nth-of-type(1):before, .about_v2_text p:nth-of-type(1):after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  background: url("../image/quotation.svg") center center/cover no-repeat;
+}
+.about_v2_text p:nth-of-type(1):before {
+  left: -30px;
+}
+.about_v2_text p:nth-of-type(1)::after {
+  right: -30px;
+  transform: scale(-1, 1);
 }
 
 .services__title {
@@ -1313,32 +1459,6 @@ h3 {
   justify-content: center;
 }
 
-.service_count {
-  border-radius: 500px;
-  background-color: #2ca656;
-  color: #fff;
-  font-size: 10px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-transform: uppercase;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  padding: 8px 25px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-.service_count:before {
-  content: "";
-  width: 4px;
-  height: 4px;
-  background-color: #fff;
-  margin-right: 4px;
-  display: block;
-  border-radius: 50%;
-}
-
 .services__item_img {
   border-radius: 15px;
   width: 50%;
@@ -1357,6 +1477,7 @@ h3 {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  filter: grayscale(100%);
 }
 
 .mission__title {
@@ -1405,6 +1526,7 @@ h3 {
   line-height: normal;
   border-radius: 500px;
   margin-bottom: 40px;
+  cursor: pointer;
 }
 .gallery__container_btns-btn.active-tab {
   background-color: #2ca656;
@@ -1577,4 +1699,281 @@ h3 {
 
 .faq__accord {
   width: 100%;
+}
+
+.achievements__title {
+  margin-bottom: 40px;
+  align-items: center;
+}
+
+.achievements__items {
+  display: flex;
+  flex-direction: column;
+}
+
+.achievements__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 40px 40px 40px 60px;
+  border-radius: 30px;
+  border: 1px solid #0e0c15;
+  position: relative;
+  z-index: 1;
+  gap: 10px;
+}
+@media screen and (max-width: 767px) {
+  .achievements__item {
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+  }
+}
+.achievements__item p {
+  width: 38%;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+@media screen and (max-width: 767px) {
+  .achievements__item p {
+    width: 100%;
+  }
+}
+.achievements__item:nth-of-type(even) {
+  background-color: #fff;
+}
+.achievements__item:nth-of-type(odd) {
+  color: #fff;
+}
+.achievements__item:nth-of-type(odd) .achievements__count div {
+  background-color: #fff;
+  color: #0e0c15;
+}
+.achievements__item:nth-of-type(odd):after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #131313;
+  opacity: 0.85;
+  z-index: -1;
+  border-radius: inherit;
+}
+.achievements__item:nth-of-type(4n+1) {
+  background: url(../image/services-img1.jpg) center center/cover no-repeat;
+}
+.achievements__item:nth-of-type(4n+3) {
+  background: url(../image/services-img2.jpg) center center/cover no-repeat;
+}
+
+.achievements__count {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  width: 60%;
+  z-index: 1;
+}
+@media screen and (max-width: 767px) {
+  .achievements__count {
+    width: 100%;
+  }
+}
+.achievements__count div {
+  background-color: #0e0c15;
+  color: #fff;
+  max-width: 64px;
+  max-height: 64px;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border-radius: 50%;
+}
+
+.vision__title {
+  margin-bottom: 40px;
+  align-items: center;
+}
+
+.vision__row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  align-content: stretch;
+  margin-bottom: 40px;
+}
+.vision__row:nth-of-type(even) {
+  flex-direction: row-reverse;
+}
+.vision__row:nth-of-type(even) .vision__arrow img {
+  transform: scale(-1, 1);
+}
+
+.vision__item {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  background-color: #fff;
+  border-radius: 30px;
+  border: 1px solid #7f868a;
+  width: calc(50% - 20px);
+  height: auto;
+  gap: 30px;
+}
+@media screen and (max-width: 1023px) {
+  .vision__item {
+    width: calc(66.6666666667% - 20px);
+  }
+}
+@media screen and (max-width: 767px) {
+  .vision__item {
+    padding: 20px;
+  }
+}
+.vision__item img {
+  max-height: 240px;
+  border-radius: 120px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  aspect-ratio: 1/0.5;
+}
+.vision__item .vision__item_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+.vision__item .vision__item_content .green {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: capitalize;
+}
+.vision__item .vision__item_content p {
+  width: 80%;
+  position: relative;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+.vision__item .vision__item_content p:nth-of-type(1):before, .vision__item .vision__item_content p:nth-of-type(1):after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  background: url("../image/quotation.svg") center center/cover no-repeat;
+}
+.vision__item .vision__item_content p:nth-of-type(1):before {
+  left: -30px;
+}
+.vision__item .vision__item_content p:nth-of-type(1)::after {
+  right: -30px;
+  transform: scale(-1, 1);
+}
+
+.vision__arrow {
+  width: calc(50% - 20px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 1023px) {
+  .vision__arrow {
+    width: calc(25% - 20px);
+  }
+}
+.vision__arrow img {
+  max-width: 300px;
+  max-height: 300px;
+  width: 100%;
+  height: 100%;
+}
+
+.who__container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  position: relative;
+  align-items: start;
+}
+@media screen and (max-width: 1023px) {
+  .who__container {
+    flex-direction: column;
+  }
+}
+
+.events {
+  padding: 120px 0;
+  background-color: #fff;
+  border-bottom: 1px solid #7f868a;
+}
+
+.events__container {
+  display: flex;
+  gap: 60px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.events__images {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  width: calc(50% - 30px);
+  position: relative;
+}
+.events__images img {
+  border-radius: 50%;
+  max-width: 385px;
+  aspect-ratio: 1/1;
+}
+.events__images img:nth-child(2) {
+  position: absolute;
+  top: 0;
+  right: 0%;
+  border: 10px solid #fff;
+  z-index: 1;
+}
+.events__images img:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: 0%;
+  z-index: 0;
+  filter: grayscale(100%);
+}
+
+.events__content {
+  height: auto;
+  display: flex;
+  width: calc(50% - 30px);
+  flex-direction: column;
+}
+.events__content h2 {
+  text-wrap: balance;
+  margin-bottom: 10px;
+}
+.events__content p {
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+.events__content .btn {
+  margin-top: auto;
+  max-width: 220px;
 }/*# sourceMappingURL=style.css.map */
