--- a/assets/style/_root.scss
+++ b/assets/style/_root.scss
@@ -39,11 +39,11 @@ body {
   color: $--black;
   background: #f3f7f9;
 }
-// main {
-//   @media screen and (max-width: 1023px) {
-//     margin-top: 130px;
-//   }
-// }
+main {
+  @media screen and (max-width: 1023px) {
+    margin-top: 77px;
+  }
+}
 // * {
 //   border: 1px solid red;
 // }
