--- a/assets/style/_mixin.scss
+++ b/assets/style/_mixin.scss
@@ -99,3 +99,12 @@
   font-weight: 400;
   line-height: 140%;
 }
+@mixin text-regular-l{
+	font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+@media screen and (max-width:550px) {
+	font-size: 18px;
+}
+}
