--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -75,6 +75,7 @@ button {
 /* H3 */
 /* p (#2) */
 /* p (#6) */
+/* p (#5) */
 @font-face {
   font-family: "Manrope";
   src: url(../fonts/Manrope-Regular.ttf);
@@ -208,8 +209,8 @@ h3 {
 }
 .btn:after {
   content: "";
-  width: 15px;
-  height: 14px;
+  width: 12px;
+  height: 12px;
   background: url("../image/Arrow.svg") center center/cover no-repeat;
 }
 .btn:hover {
@@ -636,11 +637,11 @@ h3 {
 }
 
 .animated {
-  animation: img-animate 2s linear forwards;
+  animation: img-animate 0.7s linear forwards;
 }
 
 .reverse-animated {
-  animation: reverse-img-animate 2s linear forwards;
+  animation: reverse-img-animate 0.7s linear forwards;
 }
 
 @keyframes img-animate {
@@ -2233,4 +2234,436 @@ h3 {
   .feature__item_text {
     width: 100%;
   }
+}
+
+.contact__map {
+  position: relative;
+  border-radius: 40px;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 1023px) {
+  .contact__map {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+.contact__map iframe {
+  border-radius: 40px;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/0.38;
+}
+@media screen and (max-width: 1023px) {
+  .contact__map iframe {
+    aspect-ratio: 1/0.5;
+  }
+}
+.contact__map .contact__item {
+  width: 42%;
+}
+@media screen and (max-width: 1023px) {
+  .contact__map .contact__item {
+    width: 100%;
+  }
+}
+
+.contact__map-address {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+}
+@media screen and (max-width: 1023px) {
+  .contact__map-address {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    max-width: 100%;
+    width: 100%;
+  }
+}
+.contact__map-address span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 1px solid #0e0c15;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.contact__item {
+  padding: 30px;
+  border: 0.5px solid #7f868a;
+  border-radius: 20px;
+  background-color: #fff;
+  flex-direction: column;
+  display: flex;
+  gap: 40px;
+  width: calc(33.3333333333% - 5px);
+}
+@media screen and (min-width: 1200px) {
+  .contact__item {
+    padding: 40px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .contact__item {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact__item {
+    padding: 20px;
+  }
+}
+
+.contact__item_title {
+  padding-bottom: 10px;
+  border-bottom: 0.5px solid #7F868A;
+}
+
+.contact__items {
+  gap: 20px;
+  display: flex;
+}
+@media screen and (max-width: 1023px) {
+  .contact__items {
+    flex-direction: column;
+  }
+}
+
+.contact__item_info {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+}
+.contact__item_info svg {
+  min-width: 30px;
+  min-height: 30px;
+  flex-grow: 1;
+  width: 100%;
+  flex-grow: 1;
+  aspect-ratio: 1/1;
+  height: 100%;
+  max-width: 48px;
+  max-height: 48px;
+}
+.contact__item_info svg ellipse, .contact__item_info svg rect {
+  transition: 0.3s ease;
+}
+.contact__item_info .phone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px;
+  border-radius: 10px;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 100%;
+  border: 1px solid #0e0c15;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+@media screen and (max-width: 1100px) {
+  .contact__item_info .phone {
+    font-size: 19px;
+    padding: 10px;
+  }
+}
+.contact__item_info a:not([class]) {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 500px;
+  border: 1px solid #0e0c15;
+  padding-right: 10px;
+  width: calc(50% - 5px);
+  max-width: 135px;
+  transition: 0.3s ease;
+  gap: 5px;
+  height: 100%;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+@media screen and (min-width: 1200px) {
+  .contact__item_info a:not([class]) {
+    padding-right: 20px;
+    max-width: 100%;
+  }
+}
+.contact__item_info a:not([class]):first-child {
+  margin-right: 10px;
+}
+.contact__item_info a:not([class]) svg {
+  min-width: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .contact__item_info a:not([class]) svg {
+    min-width: -moz-fit-content;
+    min-width: fit-content;
+  }
+}
+.contact__item_info a:not([class]):hover {
+  border-color: #2ca656;
+}
+.contact__item_info a:not([class]):hover svg ellipse {
+  fill: #2ca656;
+}
+
+.contact__item_info:hover > svg rect {
+  fill: #2ca656;
+}
+
+.contact__item_info:hover > a {
+  border-color: #2ca656;
+}
+
+.book__container {
+  display: flex;
+  gap: 40px;
+}
+@media screen and (max-width: 767px) {
+  .book__container {
+    flex-direction: column;
+  }
+}
+.book__container form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px 25px;
+  padding: 60px;
+  background-color: #fff;
+  border: 0.5px solid #7f868a;
+  border-radius: 20px;
+}
+@media screen and (max-width: 767px) {
+  .book__container form {
+    width: 100%;
+    padding: 40px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .book__container form {
+    padding: 30px;
+  }
+}
+.book__container form .input-wrap {
+  position: relative;
+  width: calc(50% - 15px);
+}
+.book__container form .input-wrap:has(textarea) {
+  width: 100%;
+}
+@media screen and (max-width: 1023px) {
+  .book__container form .input-wrap {
+    width: 100%;
+  }
+}
+.book__container form .input-wrap input, .book__container form .input-wrap select, .book__container form .input-wrap textarea {
+  display: flex;
+  width: 100%;
+  padding: 18px;
+  align-items: flex-start;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 500px;
+  border: 1px solid #7f868a;
+  background: #F3F7F9;
+  color: #0e0c15;
+  cursor: pointer;
+  outline: none;
+}
+.book__container form .input-wrap input::-moz-placeholder, .book__container form .input-wrap select::-moz-placeholder, .book__container form .input-wrap textarea::-moz-placeholder {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #0e0c15;
+}
+.book__container form .input-wrap input::placeholder, .book__container form .input-wrap select::placeholder, .book__container form .input-wrap textarea::placeholder {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #0e0c15;
+}
+.book__container form .input-wrap input:focus-within, .book__container form .input-wrap select:focus-within, .book__container form .input-wrap textarea:focus-within {
+  border-color: #2ca656;
+}
+.book__container form .input-wrap input:focus-within::-moz-placeholder, .book__container form .input-wrap select:focus-within::-moz-placeholder, .book__container form .input-wrap textarea:focus-within::-moz-placeholder {
+  color: #2ca656;
+  transform: translateY(-15px);
+}
+.book__container form .input-wrap input:focus-within::placeholder, .book__container form .input-wrap select:focus-within::placeholder, .book__container form .input-wrap textarea:focus-within::placeholder {
+  color: #2ca656;
+  transform: translateY(-15px);
+}
+.book__container form .input-wrap textarea {
+  border-radius: 20px;
+  min-height: 180px;
+  resize: none;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.book__container form .input-wrap label {
+  position: absolute;
+  top: 0;
+  transform: translate(0px, 80%);
+  left: 18px;
+  padding: 0 5px;
+  color: #0e0c15;
+  font-size: 16px;
+  transition: top 0.3s, color 0.3s, font-size 0.3s;
+}
+.book__container form .input-wrap .up {
+  top: -5px;
+  left: 18px;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #2ca656;
+}
+.book__container form .input-wrap .up input {
+  border: 1px solid #2ca656;
+}
+.book__container form .input-wrap input:focus ~ label, .book__container form .input-wrap select:focus ~ label, .book__container form .input-wrap textarea:focus ~ label {
+  top: -5px;
+  left: 18px;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #2ca656;
+}
+.book__container form .input-wrap .focused ~ label, .book__container form .input-wrap .focused ~ label, .book__container form .input-wrap .focused ~ label {
+  top: -5px;
+  left: 18px;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #2ca656;
+}
+.book__container form .select-wrap {
+  position: relative;
+  width: 100%;
+  display: flex;
+  width: 100%;
+}
+.book__container form .select-wrap span {
+  width: 100%;
+}
+.book__container form .select-wrap:before {
+  content: "";
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  right: 21px;
+  top: 45%;
+  z-index: 15;
+  background: url(../image/vector.svg) no-repeat;
+  transform: translateY(0) rotate(0);
+  transition: transform 0.3s ease;
+}
+.book__container form .select-wrap select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  position: relative;
+  display: flex;
+  width: 100%;
+  color: inherit;
+  display: flex;
+  padding: 18px;
+  align-items: flex-start;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 500px;
+  border: 1px solid #7f868a;
+  background: #F3F7F9;
+  color: #0e0c15;
+  outline: none;
+  cursor: pointer;
+}
+.book__container form .select-wrap select option {
+  font: inherit;
+  display: block;
+  white-space: nowrap;
+  color: inherit;
+}
+.book__container form .select-wrap select option option:hover {
+  background-color: #2ca656;
+}
+.book__container form .select-wrap:focus-within:before {
+  transform: translateY(-50%) rotate(180deg);
+}
+.book__container form .submit-wrap {
+  width: 100%;
+  position: relative;
+}
+.book__container form .submit-wrap input {
+  display: flex;
+  width: 100%;
+  padding: 18px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid transparent;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 500px;
+  color: #fff;
+  cursor: pointer;
+  background: #2ca656;
+  outline: none;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  transition: 0.3s ease;
+}
+.book__container form .submit-wrap input:hover {
+  background-color: #fff;
+  color: #2ca656;
+  border-color: #2ca656;
+}
+.book__container form .submit-wrap::after {
+  content: "";
+  position: absolute;
+  left: calc(50% + 35px);
+  top: 50%;
+  transform: translate(0%, -46%);
+  width: 14px;
+  height: 14px;
+  transition: all 0.3s ease;
+  background: url("../image/arrow-white-submit.svg") center center/cover no-repeat;
+}
+.book__container form .submit-wrap:hover:after {
+  background: url("../image/arrow-white-submit-green.svg") center center/cover no-repeat;
+}
+
+.book__title {
+  max-width: 420px;
+  width: 100%;
+}
+@media screen and (max-width: 767px) {
+  .book__title {
+    align-items: center;
+    text-align: center;
+    max-width: 100%;
+  }
+}
+
+.wpcf7-form-control-wrap {
+  position: relative;
 }/*# sourceMappingURL=style.css.map */
