--- a/assets/style/_accordeon.scss
+++ b/assets/style/_accordeon.scss
@@ -56,7 +56,7 @@
 	  align-items: center;
 	  justify-content: center;
       & svg {
-        transform: rotate(-45deg);
+        
         transition: 0.3s linear;
 		max-width: 25px;
 		max-height: 25px;
@@ -82,7 +82,7 @@
   border-radius: 15px;
   background: linear-gradient(to right, white, white), $--background;
   background-clip: padding-box, border-box;
-  background-origin: padding-box, border-box; /* will have no effect */
+  background-origin: padding-box, border-box; 
 }
 .accord-item.active .accord-item-bottom {
   color: $--black;
@@ -114,5 +114,5 @@
 // }
 
 .accord-item.active .accord-item-top svg {
-  transform: rotate(0deg);
+  transform: rotate(45deg);
 }
