--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -221,6 +221,40 @@ h3 {
   background-image: url("../image/arrow-white.svg");
 }
 
+.green-btn {
+  display: flex;
+  gap: 10px;
+  border: 1px solid #2ca656;
+  padding: 11px 24px;
+  padding: 11px 20px;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  width: 100%;
+  border-radius: 50px;
+  text-align: center;
+  transition: 0.3s linear;
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: normal;
+  position: relative;
+  color: #fff;
+  background-color: #2ca656;
+}
+.green-btn:after {
+  content: "";
+  width: 12px;
+  height: 12px;
+  background-image: url("../image/arrow-white.svg");
+}
+.green-btn:hover {
+  color: #2ca656;
+  background-color: #fff;
+}
+.green-btn:hover:after {
+  background: url("../image/Arrow.svg") center center/cover no-repeat;
+}
+
 .mb-m {
   margin-bottom: 120px;
 }
@@ -636,6 +670,34 @@ h3 {
   }
 }
 
+.navbar {
+  width: 25%;
+}
+@media screen and (max-width: 767px) {
+  .navbar {
+    width: 100%;
+  }
+}
+.navbar h3 {
+  margin-bottom: 20px;
+}
+.navbar .green-btn {
+  max-width: 100%;
+  background-color: #2ca656;
+  color: #fff;
+  padding: 15px;
+}
+
+.navbar__wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.navbar__wrap .news__item img {
+  max-height: 200px;
+}
+
 .animated {
   animation: img-animate 0.7s linear forwards;
 }
@@ -730,7 +792,6 @@ h3 {
   justify-content: center;
 }
 .accord-item-top .close svg {
-  transform: rotate(-45deg);
   transition: 0.3s linear;
   max-width: 25px;
   max-height: 25px;
@@ -756,7 +817,7 @@ h3 {
   border-radius: 15px;
   background: linear-gradient(to right, white, white), linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
   background-clip: padding-box, border-box;
-  background-origin: padding-box, border-box; /* will have no effect */
+  background-origin: padding-box, border-box;
 }
 
 .accord-item.active .accord-item-bottom {
@@ -780,7 +841,7 @@ h3 {
 }
 
 .accord-item.active .accord-item-top svg {
-  transform: rotate(0deg);
+  transform: rotate(45deg);
 }
 
 .header {
@@ -2666,4 +2727,71 @@ h3 {
 
 .wpcf7-form-control-wrap {
   position: relative;
+}
+
+.article {
+  padding: 40px;
+  background-color: #fff;
+  border: 0.5px solid #7f868a;
+  border-radius: 20px;
+}
+@media screen and (max-width: 767px) {
+  .article {
+    padding: 20px;
+  }
+}
+.article img {
+  max-width: 100%;
+  border-radius: 10px;
+  width: 100%;
+  aspect-ratio: 1/0.45;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 100% 20%;
+     object-position: 100% 20%;
+  margin-bottom: 40px;
+}
+.article h2 {
+  margin-bottom: 10px;
+}
+.article h3 {
+  margin-bottom: 10px;
+}
+.article h4 {
+  margin-bottom: 10px;
+}
+.article p {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+.article ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 40px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+.article ul li {
+  position: relative;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-left: 22px;
+}
+.article ul li:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  left: -16px;
+  display: block;
+  width: 12px;
+  height: 12px;
+  background: url(../image/list-circle.svg) center center/cover no-repeat;
 }/*# sourceMappingURL=style.css.map */
