add style for pages

--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -100,9 +100,13 @@
     color: inherit;
     max-width: 163px;
     width: 100%;
-
+	background-color: transparent;
     &:hover {
       color: $--white;
+	  background-color: $--green;
+		& svg path{
+			fill:$--white;
+		}
     }
   }
 }
