--- a/assets/style/_feature.scss
+++ b/assets/style/_feature.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
+	background-color: $--white;
 	@media screen and (max-width:767px) {
 		padding: 40px;
 	}
