--- a/assets/style/_gallery.scss
+++ b/assets/style/_gallery.scss
@@ -2,6 +2,7 @@
   & .btn {
     margin: 0 auto;
     max-width: 179px;
+	
   }
 }
 .gallery__title {
@@ -29,12 +30,17 @@
   border-radius: 500px;
   margin-bottom: 40px;
   cursor: pointer;
+  transition: .3s ease;
   &.active-tab {
     background-color: $--green;
     color: $--white;
   }
   @media screen and (max-width: 767px) {
     white-space: nowrap;
+  }
+  &:hover{
+	background-color: $--green;
+    color:$--white ;
   }
 }
 .gallery__images {
