--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -2,6 +2,7 @@
 @import "./mixin";
 @import "./root";
 @import "./accordeon";
+@import './move';
 @import "./header";
 @import "./footer";
 @import "./hero";
@@ -22,3 +23,4 @@
 @import './book';
 @import './article';
 @import './promo';
+@import './error';
