--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1238,8 +1238,12 @@ h3 {
   background: linear-gradient(94deg, #51bf26 0%, #e3ae0b 100%);
   color: #fff;
 }
-.hero .hero__container {
+
+.hero__container {
   padding: 50px 0;
+}
+.main .hero__container {
+  padding: 0;
 }
 
 .hero__top {
